remove -XX:+AggressiveOpts that is not supported by the latest JDK